apisix/ing.yaml
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: apisix-dashboard
#   namespace: ingress-apisix
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#   - host: apisix.local.com
#     http:
#       paths:
#       - backend:
#           serviceName: apisix-dashboard
#           servicePort: 80
#         path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisix-dashboard
  namespace: ingress-apisix
  annotations:
    kubernetes.io/ingress.class: "apisix"
spec:
  rules:
  - host: apisix.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apisix-dashboard
            port:
              number: 80
